New planes-based pathfinding example

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -38,6 +38,10 @@ const links = [
     url: 'sword_ml.html',
   },
   {
+    name: 'Pathfinding',
+    url: 'pathfinding_ml.html',
+  },
+  {
     name: 'Radar',
     url: 'radar_ml.html',
   },
