--- a/examples/pathfinding_ml.html
+++ b/examples/pathfinding_ml.html
@@ -13,7 +13,7 @@
   <script>
     let container, scene, camera, display, model, avatarMesh;
     let mesher = null;
-    const waypoints = {};
+    const waypoints = [];
     let waypointsValid = false;
     const lineMeshes = [];
     let animation = null;
@@ -26,9 +26,11 @@
     const localMatrix = new THREE.Matrix4();
     const localFloat32Array = new Float32Array(16);
 
+    const waypointResolution = 0.2;
+    const waypointResolutionSq = waypointResolution*waypointResolution;
+
     const numCubes = 100;
-    const cubeSize = 0.2;
-    const cubeRange = 1;
+    // const cubeSize = 0.2;
     const cubeGeometry = new THREE.BoxBufferGeometry(1, 1, 1);
     const pointGeometry = cubeGeometry.clone().applyMatrix(new THREE.Matrix4().makeScale(0.01, 0.01, 0.01));
     const pointMaterial = new THREE.MeshPhongMaterial({
@@ -109,98 +111,100 @@
       })();
       scene.add(avatarMesh);
 
-      const terrainMeshes = [];
-      const terrainMaterial = new THREE.MeshPhongMaterial({
-        color: 0x666666,
+      const planeMeshes = [];
+      const planeMeshesCache = {};
+      const planeGeometry1 = new THREE.PlaneBufferGeometry(1, 1)
+        .applyMatrix(
+          new THREE.Matrix4().makeRotationFromQuaternion(
+            new THREE.Quaternion().setFromUnitVectors(
+              new THREE.Vector3(0, 0, -1),
+              new THREE.Vector3(0, 1, 0),
+            )
+          )
+        );
+      const planeMaterial1 = new THREE.MeshPhongMaterial({
+        color: 0xe91e63,
       });
-      const _getTerrainMesh = meshId => {
-        let terrainMesh = terrainMeshes.find(terrainMesh => terrainMesh.meshId === meshId);
-        if (!terrainMesh) {
-          terrainMesh = _makeTerrainMesh(meshId);
-          terrainMeshes.push(terrainMesh);
-          scene.add(terrainMesh);
-        }
-        return terrainMesh;
-      };
-      const fakeArrayBuffer = new ArrayBuffer(3 * 4);
-      const fakeFloat32Array = new Float32Array(fakeArrayBuffer, 0, 3);
-      const fakeUint16Array = new Uint16Array(fakeArrayBuffer, 0, 3);
-      const _makeTerrainMesh = meshId => {
-        const geometry = new THREE.BufferGeometry();
-        const gl = renderer.getContext();
-        const attributes = renderer.getAttributes();
+      const planeGeometry2 = planeGeometry1.clone()
+        .applyMatrix(
+          new THREE.Matrix4().makeRotationFromQuaternion(
+            new THREE.Quaternion().setFromUnitVectors(
+              new THREE.Vector3(0, 1, 0),
+              new THREE.Vector3(0, -1, 0),
+            )
+          )
+        );
+      const planeMaterial2 = new THREE.MeshPhongMaterial({
+        color: 0x673ab7,
+      });
+      const _loadPlanes = planes => {
+        _clearPlanes();
 
-        geometry.addAttribute('position', new THREE.BufferAttribute(fakeFloat32Array, 3));
-        attributes.update(geometry.attributes.position, gl.ARRAY_BUFFER);
-        geometry.addAttribute('normal', new THREE.BufferAttribute(fakeFloat32Array, 3));
-        attributes.update(geometry.attributes.normal, gl.ARRAY_BUFFER);
-        geometry.setIndex(new THREE.BufferAttribute(fakeUint16Array, 1));
-        attributes.update(geometry.index, gl.ELEMENT_ARRAY_BUFFER);
+        for (let i = 0; i < planes.length; i++) {
+          const plane = planes[i];
 
-        const material = terrainMaterial;
+          const object = (() => {
+            const cachedObject = planeMeshesCache[plane.id];
 
-        const mesh = new THREE.Mesh(geometry, material);
-        mesh.matrixAutoUpdate = false;
-        mesh.frustumCulled = false;
-        mesh.meshId = meshId;
-        return mesh;
-      };
-      const _loadTerrainMesh = (terrainMesh, {transformMatrix, positionArray, positionBuffer, positionCount, normalArray, normalBuffer, normalCount, indexArray, indexBuffer, count}) => {
-        {
-          terrainMesh.matrix.fromArray(transformMatrix);
-          terrainMesh.matrixWorldNeedsUpdate = true;
+            if (cachedObject) {
+              return cachedObject;
+            } else {
+              const object = new THREE.Object3D();
+              object.position.fromArray(plane.position);
+              object.quaternion.fromArray(plane.rotation);
 
-          const {geometry} = terrainMesh;
-          const attributes = renderer.getAttributes();
+              const frontMesh = (() => {
+                const mesh = new THREE.Mesh(planeGeometry1, planeMaterial1);
+                mesh.scale.set(plane.size[0], 1, plane.size[1]);
+                mesh.frustumCulled = false;
+                // mesh.updateMatrix();
+                // mesh.updateMatrixWorld();
+                return mesh;
+              })();
+              object.add(frontMesh);
+              object.frontMesh = frontMesh;
 
-          attributes.get(geometry.attributes.position).buffer = positionBuffer;
-          geometry.attributes.position.count = positionCount / 3;
+              const backMesh = (() => {
+                const mesh = new THREE.Mesh(planeGeometry2, planeMaterial2);
+                mesh.scale.set(plane.size[0], 1, plane.size[1]);
+                mesh.frustumCulled = false;
+                // mesh.updateMatrix();
+                // mesh.updateMatrixWorld();
+                return mesh;
+              })();
+              object.add(backMesh);
+              object.backMesh = backMesh;
 
-          attributes.get(geometry.attributes.normal).buffer = normalBuffer;
-          geometry.attributes.normal.count = normalCount / 3;
+              planeMeshesCache[plane.id] = object;
 
-          attributes.get(geometry.index).buffer = indexBuffer;
-          geometry.index.count = count / 1;
+              return object;
+            }
+          })();
+
+          scene.add(object);
+          planeMeshes.push(object);
         }
 
         if (!waypointsValid) {
-          const waypointResolution = 0.2;
-          const waypointHalfResolution = waypointResolution/2;
+          for (let i = 0; i < planeMeshes.length; i++) {
+            const planeMesh = planeMeshes[i];
+            const {position, quaternion} = planeMesh;
+            const {frontMesh} = planeMesh;
+            const {scale} = frontMesh;
 
-          const filledPoints = {};
-          for (let i = 0; i < positionCount; i += 3) {
-            localVector
-              .fromArray(positionArray, i)
-              .applyMatrix4(
-                localMatrix.fromArray(transformMatrix)
-              );
-            localVector.x = Math.floor(localVector.x/waypointResolution)*waypointResolution;
-            localVector.y = Math.floor(localVector.y/waypointResolution)*waypointResolution;
-            localVector.z = Math.floor(localVector.z/waypointResolution)*waypointResolution;
-            const key = `${localVector.x}:${localVector.y}:${localVector.z}`;
+            for (let x = Math.ceil(-scale.x/2/waypointResolution)*waypointResolution; x < scale.x/2; x += waypointResolution) {
+              for (let z = Math.ceil(-scale.z/2/waypointResolution)*waypointResolution; z < scale.z/2; z += waypointResolution) {
+                const pointMesh = new THREE.Mesh(pointGeometry, pointMaterial);
+                pointMesh.position
+                  .copy(position)
+                  .add(
+                    localVector.set(x, waypointResolution/2, z)
+                      .applyQuaternion(quaternion)
+                  )
+                pointMesh.frustumCulled = false;
+                scene.add(pointMesh);
 
-            if (!filledPoints[key]) {
-              filledPoints[key] = localVector.clone();
-            }
-          }
-          for (const key in filledPoints) {
-            const filledPoint = filledPoints[key];
-            localVector.copy(filledPoint);
-            for (;;) {
-              localVector.y += waypointResolution;
-              const key2 = `${localVector.x}:${localVector.y}:${localVector.z}`;
-              if (!filledPoints[key2]) {
-                if (!waypoints[key2]) {
-                  const pointMesh = new THREE.Mesh(pointGeometry, pointMaterial);
-                  pointMesh.position
-                    .copy(localVector)
-                    .add(localVector2.set(waypointHalfResolution, waypointHalfResolution, waypointHalfResolution));
-                  pointMesh.frustumCulled = false;
-                  scene.add(pointMesh);
-
-                  waypoints[key2] = localVector.clone();
-                }
-                break;
+                waypoints.push(pointMesh.position);
               }
             }
           }
@@ -208,121 +212,102 @@
           waypointsValid = true;
         }
       };
-      const _removeTerrainMesh = terrainMesh => {
-        scene.remove(terrainMesh);
-        terrainMesh.geometry.dispose();
-      };
-      const _clearTerrainMeshes = () => {
-        for (let i = 0; i < terrainMeshes.length; i++) {
-          _removeTerrainMesh(terrainMeshes[i]);
+      const _clearPlanes = () => {
+        for (let i = 0; i < planeMeshes.length; i++) {
+          scene.remove(planeMeshes[i]);
         }
-        terrainMeshes.length = 0;
+        planeMeshes.length = 0;
       };
-      const _onMesh = updates => {
-        for (let i = 0; i < updates.length; i++) {
-          const update = updates[i];
-          const {id, type} = update;
-
-          if (type === 'new' || type === 'update') {
-            _loadTerrainMesh(_getTerrainMesh(id), update);
-          } else if (type === 'unchanged') {
-            // nothing
-          } else {
-            const index = terrainMeshes.findIndex(terrainMesh => terrainMesh.meshId === id);
-            if (index !== -1) {
-              const terrainMesh = terrainMeshes[index];
-              _removeTerrainMesh(terrainMesh);
-              terrainMeshes.splice(index, 1);
-            }
-          }
-        }
+      const _onPlanes = planes => {
+        _loadPlanes(planes);
       };
 
       if (window.browser && window.browser.magicleap) {
-        mesher = window.browser.magicleap.RequestMeshing();
-        mesher.onmesh = _onMesh;
+        planeTracker = window.browser.magicleap.RequestPlaneTracking();
+        planeTracker.onplanes = _onPlanes;
       } else {
-        const gl = renderer.getContext();
+        const updates = Array(10);
+        const _makeSize = () => new THREE.Vector2(1 + Math.random()*2, 1 + Math.random()*2);
+        const _makeOffset = (oldPosition, oldNormal, oldSize) => {
+          const corner = (() => {
+            const index = Math.floor(Math.random() * 4);
+            switch (index) {
+              case 0: return new THREE.Vector3(1, 0, 0);
+              case 1: return new THREE.Vector3(-1, 0, 0);
+              case 2: return new THREE.Vector3(0, 0, 1);
+              case 3: return new THREE.Vector3(0, 0, -1);
+              default: return null;
+            }
+          })();
+          const direction = Math.random() < 0.5 ? 1 : -1;
 
-        const geometryPositions = cubeGeometry.attributes.position.array;
-        const geometryNormals = cubeGeometry.attributes.normal.array;
-        const geometryIndices = cubeGeometry.index.array;
+          const newNormal = corner.clone()
+            .applyQuaternion(
+              new THREE.Quaternion().setFromUnitVectors(
+                new THREE.Vector3(0, 1, 0),
+                oldNormal
+              )
+            )
+            .multiplyScalar(direction);
+          const newSize = _makeSize();
+          const newPosition = oldPosition.clone()
+            .add(
+              corner.clone()
+                .multiply(new THREE.Vector3(oldSize.x/2, 1, oldSize.y/2))
+                .applyQuaternion(
+                  new THREE.Quaternion().setFromUnitVectors(
+                    new THREE.Vector3(0, 1, 0),
+                    oldNormal
+                  )
+                )
+            )
+            .sub(
+              oldNormal.clone()
+                .multiplyScalar(direction)
+                .multiply(
+                  new THREE.Vector3(newSize.x/2, 1, newSize.y/2)
+                    .applyQuaternion(
+                      new THREE.Quaternion().setFromUnitVectors(
+                        new THREE.Vector3(0, 1, 0),
+                        newNormal
+                      )
+                    )
+                )
+            );
 
-        /* for (let j = 0; j < geometryPositions.length; j += 3) {
-          localVector
-            .fromArray(geometryPositions, j)
-            .multiplyScalar(cubeSize)
-            .toArray(geometryPositions, j);
-        } */
+          return {
+            position: newPosition,
+            normal: newNormal,
+            size: newSize,
+          };
+        };
+        let position = null;
+        let normal = null;
+        let size = null;
+        for (let i = 0; i < updates.length; i++) {
+          if (!position) {
+            position = new THREE.Vector3(0, 0, 0);
+            normal = new THREE.Vector3(0, 1, 0);
+            size = _makeSize();
+          } else {
+            const offset = _makeOffset(position, normal, size);
 
-        const positionArray = new Float32Array(new ArrayBuffer(numCubes * geometryPositions.length * Float32Array.BYTES_PER_ELEMENT));
-        const normalArray = new Float32Array(new ArrayBuffer(numCubes * geometryNormals.length * Float32Array.BYTES_PER_ELEMENT));
-        const indexArray = new Uint16Array(new ArrayBuffer(numCubes * geometryIndices.length * Float32Array.BYTES_PER_ELEMENT));
-        for (let i = 0; i < numCubes; i++) {
-          const positionDstOffset = i*geometryPositions.length;
-          const offsetVector = localVector2.set((Math.random()-0.5)*2*cubeRange, (Math.random()-0.5), (Math.random()-0.5)*2*cubeRange);
-          const offsetEuler = localEuler.set((Math.random()-0.5)*2*Math.PI, (Math.random()-0.5)*2*Math.PI, (Math.random()-0.5)*2*Math.PI, 'YXZ');
-          for (let j = 0; j < geometryPositions.length; j += 3) {
-            localVector
-              .fromArray(geometryPositions, j)
-              .multiplyScalar(cubeSize)
-              .applyEuler(offsetEuler)
-              .add(offsetVector)
-              .toArray(positionArray, positionDstOffset + j);
+            position = offset.position;
+            normal = offset.normal;
+            size = offset.size;
           }
-
-          const normalDstOffset = i*geometryNormals.length;
-          for (let j = 0; j < geometryNormals.length; j++) {
-            normalArray[normalDstOffset + j] = geometryNormals[j];
-          }
-
-          const indexDstOffset = i*geometryIndices.length;
-          const indexSrcOffset = i*geometryPositions.length/3;
-          for (let j = 0; j < geometryIndices.length; j++) {
-            indexArray[indexDstOffset + j] = geometryIndices[j] + indexSrcOffset;
-          }
+          updates[i] = {
+            id: i + '',
+            position: position.toArray(new Float32Array(3)),
+            rotation: new THREE.Quaternion().setFromUnitVectors(
+              new THREE.Vector3(0, 1, 0),
+              normal
+            ).toArray(new Float32Array(4)),
+            size: size.toArray(new Float32Array(2)),
+          };
         }
-
-        const transformMatrix = localMatrix
-          .fromArray(window.document.xrOffset.matrix)
-          .getInverse(localMatrix)
-          .toArray(localFloat32Array);
-
-        const positionBuffer = gl.createBuffer();
-        gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
-        gl.bufferData(gl.ARRAY_BUFFER, positionArray, gl.STATIC_DRAW);
-        const positionCount = positionArray.length;
-
-        const normalBuffer = gl.createBuffer();
-        gl.bindBuffer(gl.ARRAY_BUFFER, normalBuffer);
-        gl.bufferData(gl.ARRAY_BUFFER, normalArray, gl.STATIC_DRAW);
-        const normalCount = normalArray.length;
-
-        const indexBuffer = gl.createBuffer();
-        gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer);
-        gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indexArray, gl.STATIC_DRAW);
-        const count = indexArray.length;
-
-        renderer.state.reset();
-
-        const updates = [
-          {
-            id: 0,
-            type: 'update',
-            transformMatrix,
-            positionArray,
-            positionBuffer,
-            positionCount,
-            normalArray,
-            normalBuffer,
-            normalCount,
-            indexArray,
-            indexBuffer,
-            count,
-          },
-        ];
         setInterval(() => {
-          _onMesh(updates);
+          _onPlanes(updates);
         }, 100);
       }
 
@@ -366,11 +351,7 @@
         }
       } */
       if (waypointsValid) {
-        const _getRandomWaypoint = () => {
-          const keys = Object.keys(waypoints);
-          const key = keys[Math.floor(Math.random() * keys.length)];
-          return waypoints[key];
-        };
+        const _getRandomWaypoint = () => waypoints[Math.floor(Math.random() * waypoints.length)];
         const _getPath = (waypoint1, waypoint2) => {
           const path = astar(waypoint1, waypoint2, {
             id (node) {
@@ -380,24 +361,10 @@
               return node === waypoint2;
             },
             getSuccessors(node) {
-              let result = [];
-              for (let dz = -1; dz <= 1; dz++) {
-                for (let dy = -1; dy <= 1; dy++) {
-                  for (let dx = -1; dx <= 1; dx++) {
-                    if (dz !== 0 || dy !== 0 || dx !== 0) {
-                      const key = `${node.x + dx*cubeSize}:${node.y + dy*cubeSize}:${node.z + dz*cubeSize}`;
-                      const neighbor = waypoints[key];
-                      if (neighbor) {
-                        result.push(neighbor);
-                      }
-                    }
-                  }
-                }
-              }
-              return result;
+              return waypoints.filter(waypoint => waypoint !== node && waypoint.distanceToSquared(node) <= waypointResolutionSq*1.5);
             },
             distance(nodeA, nodeB) {
-              return 1;
+              return nodeA.distanceToSquared(nodeB);
             },
             estimate(node, goal) {
               return node.distanceToSquared(goal);
@@ -424,8 +391,7 @@
             lineMesh.position
               .copy(waypoint1)
               .add(waypoint2)
-              .divideScalar(2)
-              .add(localVector.set(cubeSize/2, cubeSize/2, cubeSize/2));
+              .divideScalar(2);
             lineMesh.quaternion.setFromUnitVectors(
               localVector.set(0, 0, -1),
               localVector2.copy(waypoint2).sub(waypoint1).normalize()
@@ -459,15 +425,15 @@
             startTime: now,
             endTime: now + animationTime,
             startPosition: avatarMesh.node
-              .clone()
-              .add(localVector2.set(cubeSize/2, cubeSize/2, cubeSize/2)),
+              .clone(),
+              // .add(localVector2.set(cubeSize/2, cubeSize/2, cubeSize/2)),
             startQuaternion: avatarMesh.quaternion.clone(),
             update() {
               const now = Date.now();
               const factor = Math.min((now - this.startTime) / (this.endTime - this.startTime), 1);
               const nextPathIndex = pathIndex + 1;
               const {startPosition} = this;
-              const endPosition = localVector.copy(path[nextPathIndex]).add(localVector2.set(cubeSize/2, cubeSize/2, cubeSize/2));
+              const endPosition = localVector.copy(path[nextPathIndex])//.add(localVector2.set(cubeSize/2, cubeSize/2, cubeSize/2));
               avatarMesh.position
                 .copy(startPosition)
                 .lerp(endPosition, factor);
