--- a/examples/minimap_ml.html
+++ b/examples/minimap_ml.html
@@ -356,7 +356,7 @@
           // controllerMesh.updateMatrixWorld();
           controllerMesh.matrixWorldNeedsUpdate = true;
           // controllerMesh.matrixWorld.multiplyMatrices(controllerMesh.parent.matrixWorld, controllerMesh.matrix);
-          // controllerMesh.matrixWorld.fromArray(pose.pointerMatrix);
+          // controllerMesh.matrixWorld.fromArray(pose.targetRay.transformMatrix);
           // controllerMesh.matrix.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
           // controllerMesh.updateMatrixWorld(true);
 
